@@ -8,7 +8,7 @@ Maintainer: Michael Thrun <m.thrun@gmx.net>
 Description: Gives access to data visualisation methods that are relevant from the data scientist's point of view. The flagship idea of 'DataVisualizations' is the mirrored density plot (MD-plot) for either classified or non-classified multivariate data presented in Thrun et al. (2019) <arXiv:1908.06081>. The MD-plot outperforms the box-and-whisker diagram (box plot) and bean plot. Furthermore, a collection of various visualization methods for univariate data is provided. In the case of exploratory data analysis, 'DataVisualizations' makes it possible to inspect the distribution of each feature of a dataset visually through a combination of four methods. One of these methods is the Pareto density estimation (PDE) of the probability density function (pdf). Additionally, visualizations of the distribution of distances using PDE, the scatter-density plot using PDE for two variables as well as the Shepard density plot and the Bland-Altman plot are presented here. Pertaining to classified high-dimensional data, a number of visualizations are described, such as f.ex. the heat map and silhouette plot. A political map of the world or Germany can be visualized with the additional information defined by a classification of countries or regions. By extending the political map further, an uncomplicated function for a Choropleth map can be used which is useful for measurements across a geographic area. For categorical features, the Pie charts, slope charts and fan plots, improved by the ABC analysis, become usable. More detailed explanations are found in the book by Thrun, M.C.: "Projection-Based Clustering through Self-Organization and Swarm Intelligence" (2018) <doi:10.1007/978-3-658-20540-9>.
 License: GPL-3
 Imports: Rcpp (>= 0.12.12), ggplot2, sp
-Suggests: pracma, plyr, akima, ggmap, reshape2, plotrix, rworldmap, rgl, ABCanalysis, choroplethr, gplots, dplyr, R6, parallelDist, knitr (>= 1.12), rmarkdown (>= 0.9), vioplot, ggExtra, plotly, htmlwidgets, diptest, moments, signal, DatabionicSwarm, rowr, AdaptGauss
+Suggests: pracma, plyr, MBA, ggmap, reshape2, plotrix, rworldmap, rgl, ABCanalysis, choroplethr, gplots, dplyr, R6, parallelDist, knitr (>= 1.12), rmarkdown (>= 0.9), vioplot, ggExtra, plotly, htmlwidgets, diptest, moments, signal, DatabionicSwarm, rowr, AdaptGauss
 LinkingTo: Rcpp, RcppArmadillo
 Depends: R (>= 3.5)
 SystemRequirements: C++11
